# ks-watcher

./: Dockerfile  README.md  docker-entrypoint.py  pyproject.toml
kswatcher/: check.py  history_file_support.py  track.py  update.py
tests/: test_kswatcher.py
