[tool.poetry]
name = "kswatcher"
version = "0.1.0"
description = ""
authors = ["hejcz <rubin94@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
